--- a/packages/rollup-config/package.json
+++ b/packages/rollup-config/package.json
@@ -10,6 +10,9 @@
     "clean": "rimraf dist/"
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@swc/core": "1.7.26",
     "rollup-plugin-swc3": "~0.12.1",
     "rollup-preserve-directives": "~1.1.3"
