--- a/packages/asyncapi-plugin/package.json
+++ b/packages/asyncapi-plugin/package.json
@@ -46,6 +46,7 @@
     "memfs": "^4.11.1",
     "rimraf": "^6.1.2",
     "rollup": "~4.22.5",
+    "rollup-plugin-rename-node-modules": "^1.3.1",
     "typescript": "^5.6.2"
   },
   "files": [
