--- a/packages/asyncapi-plugin/package.json
+++ b/packages/asyncapi-plugin/package.json
@@ -35,12 +35,14 @@
     "@qraft/plugin": "workspace:*",
     "ansi-colors": "^4.1.3",
     "commander": "^14.0.2",
+    "js-yaml": "^4.1.0",
     "ora": "^8.2.0"
   },
   "devDependencies": {
     "@asyncapi/parser": "^3.4.0",
     "@openapi-qraft/eslint-config": "workspace:*",
     "@openapi-qraft/rollup-config": "workspace:*",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.16.5",
     "eslint": "^9.39.1",
     "memfs": "^4.11.1",
