chore: tune changesets config

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,16 +6,19 @@
     [
       "@openapi-qraft/cli",
       "@openapi-qraft/plugin",
-      "@qraft/cli",
-      "@qraft/asyncapi-plugin",
-      "@qraft/plugin",
-      "@qraft/asyncapi-typescript-plugin",
-      "@qraft/test-utils",
       "@openapi-qraft/tanstack-query-react-plugin",
       "@openapi-qraft/openapi-typescript-plugin",
       "@openapi-qraft/react",
       "@openapi-qraft/tanstack-query-react-types",
       "@openapi-qraft/eslint-plugin-query"
+    ],
+    [
+      "@qraft/cli",
+      "@qraft/cli-utils",
+      "@qraft/test-utils",
+      "@qraft/asyncapi-plugin",
+      "@qraft/plugin",
+      "@qraft/asyncapi-typescript-plugin"
     ]
   ],
   "linked": [],
